# torso-mapper

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/torso_mapper/: __init__.py  analyzer.py  cli.py
src/torso_mapper/data/: __init__.py  auto_trim.py  dataset.py  folder_dataset.py  utils.py
src/torso_mapper/model/: __init__.py  block.py  conv_3d_net.py  resnet_block.py
src/torso_mapper/results/: __init__.py  result_tracker.py  scan_result.py
src/torso_mapper/utils/: plotting.py
tests/: test_torso_mapper.py
