[tool.poetry]
name = "torso_mapper"
version = "0.1.0"
description = "A package for quickly identifying part of the torso imaged an CT scan throught visible vertebrae"
authors = ["Marius Urbonas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
